Finalize the Feature